@@ -18,6 +18,8 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>16</release>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -26,6 +28,9 @@
                 <version>0.0.6</version>
                 <configuration>
                     <mainClass>App</mainClass>
+                    <options>
+                        <option>--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -68,6 +73,11 @@
             <groupId>com.gluonhq</groupId>
             <artifactId>charm-glisten</artifactId>
             <version>6.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
         </dependency>
     </dependencies>
 
